@@ -260,7 +260,7 @@ allow_skill_without_day: no
 allow_es_magic_player: no
 
 // Miracle of the Sun, Moon and Stars skill ratio (100% = 10000)
-sg_miracle_skill_ratio: 1
+sg_miracle_skill_ratio: 2
 
 // Miracle of the Sun, Moon and Stars skill duration in milliseconds
 sg_miracle_skill_duration: 3600000
