@@ -186,12 +186,6 @@ static int unit_walktoxy_timer(int tid,unsigned int tick,int id,int data)
 				map_foreachinrange(skill_guildaura_sub, bl,2, BL_PC,
 					bl->id, sd->status.guild_id, strvit, agidex);
 		}
-		if (
-			(sd->class_&MAPID_UPPERMASK) == MAPID_STAR_GLADIATOR &&
-			!(ud->walk_count%WALK_SKILL_INTERVAL) &&
-			rand()%10000 < battle_config.sg_miracle_skill_ratio
-		)	//SG_MIRACLE [Komurka]
-			sc_start(&sd->bl,SC_MIRACLE,100,1,battle_config.sg_miracle_skill_duration);
 	} else if (md) {
 		if(battle_config.mob_warp&1 && map_getcell(bl->m,x,y,CELL_CHKNPC) &&
 			npc_touch_areanpc2(bl)) // Enable mobs to step on warps. [Skotlex]
